Bug 804511 - Use WT_EXECUTEDEFAULT instead of WT_EXECUTEWAITINTHREAD to avoid deadlocks while debugging. r=bent